--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ Homestead.json
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+.DS_Store
