--- a/mclient/package.json
+++ b/mclient/package.json
@@ -23,17 +23,22 @@
     "vue-loader": "^12.2.2",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.3.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "@material/button": "^0.3.10",
+    "@material/radio": "^0.2.15",
     "@material/ripple": "^0.8.0",
     "cross-env": "^5.0.3",
+    "debounce": "^1.0.2",
     "jquery": "^3.2.1",
+    "moment": "^2.19.1",
     "taffy": "^2.6.2",
     "taffydb": "^2.7.3",
     "vue": "^2.4.2",
-    "vue-i18n": "^7.1.1"
+    "vue-i18n": "^7.1.1",
+    "vuedraggable": "^2.14.1"
   },
   "keywords": []
 }
