--- a/mserver/composer.json
+++ b/mserver/composer.json
@@ -9,7 +9,9 @@
         "laravel/lumen-framework": "5.4.*",
         "vlucas/phpdotenv": "~2.2",
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/dom-crawler": "^3.3"
+        "symfony/dom-crawler": "^3.3",
+        "jenssegers/mongodb": "^3.2",
+        "nordsoftware/lumen-cors": "^2.2"
 	    },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
