--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Homestead.json
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
 .DS_Store
+mclient/dist/
