ErrorMsg can handle no results; Message new; Edge/IE removed native -ms-clear X; One Step closer to additives support; Support for new Additives-supportedBy

--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ npm-debug.log
 
 # Laravel 4 specific
 bootstrap/compiled.php
-app/storage/
+server/storage/
 
 # Laravel 5 & Lumen specific
 public/storage
