--- a/mclient/package.json
+++ b/mclient/package.json
@@ -13,36 +13,37 @@
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.29.0",
-    "node-sass": "^4.6.1",
+    "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "svg-inline-loader": "^0.8.0",
     "vue-loader": "^12.2.2",
-    "vue-template-compiler": "^2.5.4",
-    "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-server": "^2.9.4",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@material/button": "^0.3.11",
-    "@material/checkbox": "^0.25.0",
-    "@material/radio": "^0.2.15",
-    "@material/ripple": "^0.8.8",
-    "@material/switch": "^0.25.0",
-    "cross-env": "^5.1.1",
+    "@material/animation": "^0.25.0",
+    "@material/button": "^0.29.0",
+    "@material/checkbox": "^0.29.0",
+    "@material/radio": "^0.29.0",
+    "@material/ripple": "^0.29.0",
+    "@material/switch": "^0.29.0",
+    "cross-env": "^5.1.3",
     "debounce": "^1.1.0",
     "lzutf8": "^0.4.7",
-    "moment": "^2.19.2",
+    "moment": "^2.20.1",
     "taffy": "^2.6.2",
     "taffydb": "^2.7.3",
-    "vue": "^2.5.4",
-    "vue-i18n": "^7.3.2",
-    "vuedraggable": "^2.15.0"
+    "vue": "^2.5.13",
+    "vue-i18n": "^7.4.0",
+    "vuedraggable": "^2.16.0"
   },
   "keywords": []
 }
