Highlights Tab finally done, removed some unnecessary files, updated Readme,

--- a/mclient/package.json
+++ b/mclient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mensamap",
+  "name": "m-client",
   "description": "M dev and build dependencies",
   "main": "src/app.js",
   "scripts": {
