--- a/mclient/package.json
+++ b/mclient/package.json
@@ -34,11 +34,14 @@
     "@material/checkbox": "^0.29.0",
     "@material/radio": "^0.29.0",
     "@material/ripple": "^0.29.0",
+    "@material/snackbar": "^0.35.0",
     "@material/switch": "^0.29.0",
     "cross-env": "^5.1.3",
     "debounce": "^1.1.0",
     "lzutf8": "^0.4.7",
     "moment": "^2.20.1",
+    "npm": "^6.0.1",
+    "promise-timeout": "^1.3.0",
     "taffy": "^2.6.2",
     "taffydb": "^2.7.3",
     "vue": "^2.5.13",
