--- a/mclient/package.json
+++ b/mclient/package.json
@@ -9,45 +9,48 @@
   "author": "JulianWels",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.9",
+    "babel-loader": "^8.0.5",
+    "babel-minify-webpack-plugin": "^0.3.1",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.29.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
-    "vue-loader": "^12.2.2",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@material/animation": "^0.25.0",
-    "@material/button": "^0.29.0",
-    "@material/checkbox": "^0.29.0",
-    "@material/radio": "^0.29.0",
-    "@material/ripple": "^0.29.0",
-    "@material/slider": "^0.35.0",
-    "@material/snackbar": "^0.35.0",
-    "@material/switch": "^0.29.0",
-    "cross-env": "^5.1.3",
-    "debounce": "^1.1.0",
-    "lzutf8": "^0.4.7",
-    "moment": "^2.20.1",
-    "npm": "^6.0.1",
+    "@material/animation": "^1.0.0",
+    "@material/button": "^2.0.0",
+    "@material/checkbox": "^2.0.0",
+    "@material/radio": "^2.0.0",
+    "@material/ripple": "^2.0.0",
+    "@material/slider": "^1.1.0",
+    "@material/snackbar": "^2.0.0",
+    "@material/switch": "^2.0.0",
+    "cross-env": "^5.2.0",
+    "debounce": "^1.2.0",
+    "lzutf8": "^0.5.5",
+    "moment": "^2.24.0",
+    "npm": "^6.9.0",
     "promise-timeout": "^1.3.0",
     "taffy": "^2.6.2",
     "taffydb": "^2.7.3",
-    "vue": "^2.5.13",
-    "vue-i18n": "^7.4.0",
-    "vuedraggable": "^2.16.0"
+    "vue": "^2.6.10",
+    "vue-i18n": "^8.11.2",
+    "vuedraggable": "^2.20.0"
   },
   "keywords": []
 }
